overflow-x fixed

--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -170,13 +170,8 @@ input[type="submit"]
 
 
 #primary
-	-wrapper(2em, 2em)
-
-
-#primary
 #secondary
-	width 100%
-	margin-top 1em
+	-wrapper(2em, 2em)
 	position relative
 	box-sizing border-box
 
